Correct style (no gap in mobile version)

--- a/src/stylesheets/pages/item/_productPresentation.scss
+++ b/src/stylesheets/pages/item/_productPresentation.scss
@@ -1,8 +1,10 @@
 @use '../../abstracts/' as *;
 
 .product-presentation {
+  display: grid;
+  gap: rem(32);
+
   @include breakpoint(medium) {
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(rem(250), 1fr));
     grid-column-gap: 10%;
     grid-row-gap: 5%;
